# codex-survey-omr-harness

./: .gitignore  README.md  pyproject.toml
examples/demo_output/: report.md  results.csv  results.json
samples/synthetic/: blank_form.ocr.txt  blank_form_ocr.txt  expected.csv
src/survey_omr_harness/: __init__.py  cli.py
templates/: synthetic_likert.json
